bug fix: correct line-height overflowing containing div

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -105,7 +105,7 @@ a:hover{
     position: relative;
     height: 15vmin;
     width: 15vmin;
-    line-height: 20vmin;
+    line-height: 15vmin;
     background-color: var(--tileBg);
     color: white;
     text-align: center;
